# libsleepy

./: .gitmodules  CMakeLists.txt  README.md
src/: sleepy.hxx  test.cxx
